# raytracer

./: .gitignore  BoundingBoxes.cpp  CMakeLists.txt  CSG.cpp  Camera.cpp  Canvas.cpp  Color.cpp  Cones.cpp  Cubes.cpp  Cylinders.cpp  Functions.cpp  Groups.cpp  Intersection.cpp  Light.cpp  Material.cpp  Matrix.cpp  ObjParser.cpp  Object.cpp  Pattern.cpp  Plane.cpp  Point.cpp  README.md  Ray.cpp  Sphere.cpp  Transformations.cpp  Triangles.cpp  Tuple.cpp  Util.cpp  Vector.cpp  World.cpp  main.cpp
cmd/: CMakeLists.txt  README.md  main.cpp  output.ppm  scene.cpp  scene.h  test_output.ppm
gallery/: dragon.ppm  teapot-3200.ppm
include/: BoundingBoxes.h  CSG.h  Camera.h  Canvas.h  Color.h  Cones.h  Cubes.h  Cylinders.h  Functions.h  Groups.h  Intersection.h  Light.h  Material.h  Matrix.h  ObjParser.h  Object.h  Pattern.h  Plane.h  Point.h  Ray.h  Sphere.h  Transformations.h  Triangles.h  Tuple.h  Util.h  Vector.h  World.h  main.h
programs/01.projectile/: CMakeLists.txt  main.cpp
programs/02.canvas/: CMakeLists.txt  README.md  main.cpp  output.ppm
programs/04.clock/: CMakeLists.txt  README.md  main.cpp  output.ppm
programs/05.ray-sphere-cast/: CMakeLists.txt  README.md  main.cpp  output.ppm
programs/06.phong-lighting/: CMakeLists.txt  README.md  main.cpp  output.ppm  output.txt
programs/07.simple-world/: CMakeLists.txt  README.md  main.cpp  output.ppm
programs/07.simple-world/images/: rotatez.ppm
programs/08.render-shadow/: CMakeLists.txt  README.md  main.cpp  output.ppm
programs/09.plane/: CMakeLists.txt  README.md  main.cpp  output.ppm
programs/10.pattern/: CMakeLists.txt  README.md  main.cpp  output.ppm
programs/11.reflection-refraction/: CMakeLists.txt  README.md  main.cpp  output.ppm  pond.ppm  pond2.ppm  reflection.ppm  refraction.ppm  refraction2.ppm
programs/12-14.cubes-and-groups/: CMakeLists.txt  README.md  main.cpp  output.ppm
programs/15.triangles/: CMakeLists.txt  README.md  benchmark.txt  main.cpp  output.ppm  output2.ppm  output3.ppm  smooth.ppm
raytracer/: BoundingBoxes.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  Cones.cpp  Functions.cpp  Groups.cpp  ObjParser.cpp  Object.cpp  Transformations.cpp  Triangles.cpp  Vector.cpp  World.cpp  main.cpp
raytracer/include/: CSG.h  Color.h  Cones.h  Cubes.h  Cylinders.h  Groups.h  Intersection.h  Material.h  Matrix.h  ObjParser.h  Object.h  Pattern.h  Plane.h  Ray.h  Sphere.h  TRay.h  Transformations.h  Util.h  World.h
raytracer/test/: BoundingBoxes_Test.cpp  CSG_Test.cpp  Camera_Test.cpp  Groups_Test.cpp
raytracer/threadpool/: CMakeLists.txt  threadpool.cpp  threadpool.h
scenes/: crystal-ball.yml  dragon-simple.yml  dragon.yml  pattern.yml  plane.yml  pond.yml  table.yml  teapot-group.yml  teapot.yml  test.yml  three-spheres-define.yml  three-spheres-no-shadow.yml  three-spheres.yml
test/: BoundingBoxes_Test.cpp  Groups_Test.cpp
